# Kustom_ai

./: .gitignore  EXPANSION_PLAN.md  FEATURES_UPDATE.md  INTEL.md  KLWP_MCP_CONFIG.json  KLWP_MCP_SETUP.md  LICENSE  PLAY_STORE_PLAN.md  PLUGIN_ARCHITECTURE.md  README.md  buildozer.spec  buildozer.spec.additions  pyproject.toml  run_klwp_mcp.sh
.github/workflows/: build-apk.yml
android/app/src/main/java/com/chameleon/: KustomIntentHandler.kt  MoltingShader.kt
android/app/src/main/res/xml/: file_provider_paths.xml
app/: README.md  __init__.py  ai_client.py  ai_prompts.py  chameleon_effects.py  chat_handler.py  device_detector.py  device_info_screen.py  easter_egg.py  install.sh  klwp_renderer.py  kustom_bridge.py  kustom_handler.py  main.py  model_manager.py  molting_shader.py  onboarding.py  onboarding_screen.py  preset_generator.py  preset_storage.py  preview_layout.py  preview_system.py  requirements.txt  sass_personality.py  secure_storage.py  settings_screen.py  ssh_tunnel.py  terminal_theme.py  theme_matcher.py
app/plugins/: README.md  __init__.py  kustom_plugin.py  plugin_interface.py  plugin_manager.py  tasker_plugin.py  total_launcher_plugin.py
docs/: FLUX_UI_PROMPTS.md
examples/: example_usage.py
integrations/: README.md  gemini_klwp.py  gemini_simple.py  klwp_http_server.py  klwp_json_api.py
klwp_mcp_server/: __init__.py  klwp_handler.py  server.py
