[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klwp-mcp-server"
version = "0.1.0"
description = "MCP server for KLWP preset manipulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
klwp-mcp-server = "klwp_mcp_server.server:run"

[tool.setuptools.packages.find]
include = ["klwp_mcp_server*"]
